cart table fixed the horizontal scroll

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1918,7 +1918,7 @@ input.num-product::-webkit-inner-spin-button {
 .table-shopping-cart {
   border-collapse: collapse;
   width: 100%;
-  min-width: 680px;
+
 }
 
 .table-shopping-cart tr {
